# axolotl-nbt

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: lib.rs  list_serialize.rs
nbt/: Cargo.toml
nbt/src/: error.rs  lib.rs  sync.rs  tokio_impl.rs  value.rs
nbt/src/binary/: binary_uuid.rs  mod.rs
nbt/src/binary/sync/: mod.rs  value.rs
nbt/src/serde_impl/: deserializer.rs  mod.rs  value.rs
nbt/src/serde_impl/serialize/: macros.rs  mod.rs  named.rs  ser_seq.rs
nbt/src/serde_impl/serialize/sequence/: mod.rs  sub_list.rs
nbt/src/serde_impl/value/: deserialize.rs  mod.rs
nbt/src/snbt/: error.rs  mod.rs  parser.rs
nbt/src/snbt/parse/: mod.rs  parser.rs
nbt/src/sync/: mod.rs  read.rs  value_read.rs  value_write.rs  write.rs
nbt/src/value/: mod.rs  sync.rs  tokio.rs
nbt/tests/: general.rs  serde_tests.rs  test_one.nbt  test_two.nbt
snbt/: Cargo.toml
snbt/src/: error.rs  lexer.rs  lib.rs  parser.rs  value.rs
world/: Cargo.toml
world/src/: lib.rs
world/src/chunk/: compact_array.rs  mod.rs
world/src/region/: mod.rs  reader.rs
world/src/region/sync/: mod.rs  writer.rs
world/src/region/tokio_impl/: mod.rs
