[package]
name = "axolotl-nbt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1" }
thiserror = "1"
serde = { version = "1", optional = true }
paste = { version = "1" }

[features]
default = ["value", "serde"]
value = []
[dev-dependencies]

flate2 = { version = "1.0.24" }
serde = { version = "1", features = ["derive"] }
