[package]
name = "axolotl-nbt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1" }
thiserror = "1"
serde = { version = "1", optional = true }
paste = { version = "1" }
logos = "0.12"
log = { version = "0.4.17", optional = true }
uuid = { version = "1", features = ["v4"] }
[features]
default = ["value", "serde"]
value = []
# Used when you want to log more infomation about the parsing process
log_all = ["log"]
[dev-dependencies]

flate2 = { version = "1.0.24" }
serde = { version = "1", features = ["derive"] }
