[package]
name = "axolotl-snbt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", optional = true }
logos = "0.12.1"
thiserror = "1.0.31"

axolotl-nbt = { path = "../nbt", optional = true, features = ["value"] }