[package]
name = "axolotl-world"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axolotl-nbt = { path = "../nbt", features = ["value"] }

tokio = { version = "1", features = ["io-util"], optional = true }
byteorder = { version = "1" }

async-recursion = { version = "1.0.0", optional = true }
async-compression = { version = "0.3", features = ["all-algorithms", "tokio"], optional = true }
flate2 = { version = "1", optional = true }
[features]
async_io = ["tokio", "async-recursion", "async-compression", "axolotl-nbt/async_io"]
sync = ["flate2"]
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
async-compression = { version = "0.3.14", features = ["all-algorithms", "tokio"] }
flate2 = { version = "1.0.24" }
axolotl-nbt = { path = "../nbt", features = ["tokio", "value"] }
