[package]
name = "axolotl-world"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axolotl-nbt = { path = "../nbt", features = ["value"] }

byteorder = { version = "1" }


[features]
[dev-dependencies]
flate2 = { version = "1.0.24" }
axolotl-nbt = { path = "../nbt", features = ["value"] }
