[package]
name = "axolotl-world"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axolotl-nbt = { path = "../nbt", features = ["value", "serde"] }
flate2 = { version = "1" }
thiserror = "1"
byteorder = { version = "1" }
log = { version = "0.4.17", optional = true }

[features]
logs = ["log", "axolotl-nbt/log"]
[dev-dependencies]
log = "0.4.17"
simple-log = "1.6.0"
flate2 = { version = "1.0.24" }
axolotl-nbt = { path = "../nbt", features = ["value"] }
